--- a/package.json
+++ b/package.json
@@ -23,9 +23,7 @@
   "eslintConfig": {
     "extends": [
       "react-app",
-      "react-app/jest",
-      "babel/plugin-transform-private-property-in-object",
-      "next/core-web-vitals"
+      "react-app/jest"
     ]
   },
   "browserslist": {
@@ -41,6 +39,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@babel/plugin-transform-private-property-in-object": "^7.24.7"
   }
 }
